# ez-azml

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  tests.yaml
configs/clusters/: cpu.yaml  cpu_raw.yaml  t4.yaml  v100.yaml
configs/command/: main.yaml
configs/environments/: conda.yaml  pipeline.yaml
configs/pipeline/: main.yaml
configs/pytorch/: docker.yaml  main.yaml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: pipeline.py  pipelines.py  print_output.py  pytorch_script.py
src/ez_azml/: __init__.py  __version__.py  env.py  ml_client.py  params.py
src/ez_azml/cli/: __init__.py  ez_azml.py  main.py
src/ez_azml/cloud_runs/: __init__.py  cloud_run.py
src/ez_azml/cloud_runs/commands/: __init__.py  command.py  docker_command.py
src/ez_azml/cloud_runs/pipelines/: __init__.py  pipeline.py
src/ez_azml/entities/: __init__.py  compute.py  environments.py  workspace.py
tests/: conftest.py  utils.py
tests/cli/: test_cli.py
tests/cloud_runs/commands/: test_commands.py
tests/cloud_runs/pipelines/: test_pipeline.py
tests/ml_client/: test_ez_ml_client.py
tests/params/: test_docker_params.py
